# cLLM

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Doxyfile  Makefile  README.md  conanfile.py  conanfile.txt  format.sh
.github/workflows/: code-quality.yml  documentation.yml  install.yml  macos.yml  publish.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
cmake/: CPMDependency.cmake  NovaLLMConfig.cmake.in  cLLMConfig.cmake.in  options.cmake
docs/html/: doxygen_crawl.html  index.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  searchdata.js
docs/latex/: md__r_e_a_d_m_e.tex  refman.tex
documentation/: CMakeLists.txt
documentation/excalidraw/: Architecture_draft.excalidraw
include/NovaLLM/: NovaLLM-cpp.h  cLLM-cpp.h  cLLM.h  config.h  pipeline.h
include/NovaLLM/backend/: backend.h
include/NovaLLM/common/: device.h
include/NovaLLM/data/: tensor.h
include/NovaLLM/decode/: decoder.h
include/NovaLLM/encode/: encoder.h
include/NovaLLM/memory/: allocator.h  buffer_define.h  buffer_manager.h
include/NovaLLM/model/: layer.h  model.h
include/NovaLLM/parser/: parser.h
include/NovaLLM/pipeline/: pipeline.h
include/NovaLLM/tokenizer/: tokenizer.h
include/NovaLLM/utils/: log.h  macros.h  template.h
include/cLLM/: cLLM-cpp.h  cLLM.h  config.h  define.h  parser.h  pipeline.h  tokenizer.h
include/cLLM/common/: device.h  dtype.h
include/cLLM/data/: tensor.h
include/cLLM/decode/: decoder.h
include/cLLM/encode/: embedding.h
include/cLLM/memory/: allocator.h  buffer.h  buffer_manager.h
include/cLLM/utils/: macros.h
scripts/: build.sh
source/: EngineImpl.cpp  EngineImpl.h  NovaLLM.cpp  NovaLLM_test.cpp  cLLM.cpp  cLLM_test.cpp  parser.h  pipeline.h  tokenizer.h
source/backend/: device.h
source/common/: device.cpp
source/data/: tensor.cpp  tensor.h  tensor_test.cpp
source/device/: device.cpp
source/engine/: EngineImpl.cpp  EngineImpl.h  engine.cpp
source/envs/: checker.h
source/memory/: allocator.cpp  allocator.h  buffer.cpp  buffer.h  buffer_hub.cpp  buffer_hub.h  buffer_hub_test.cpp  buffer_manager.cpp  buffer_manager_test.cpp  buffer_test.cpp  cpu_allocator.cpp  gpu_allocator.cpp
source/model/: model.cpp  model.h
source/model/layers/attention/: attention.h
source/utils/: log.cpp  macros.h  template.hpp
standalone/: CMakeLists.txt  build.sh  conanfile.txt
standalone/source/: main.cpp
test/: CMakeLists.txt  build.sh  conanfile.txt
test/source/: engine_test.cpp  tensor_test.cpp
